k8s/angular-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-deployment
  labels:
    app: simple-angular
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-angular
  template:
    metadata:
      labels:
        app: simple-angular
    spec:
      containers:
      - name: simple-angular
        image: docker.io/kingyuva/simple-angular:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  selector:
    app: simple-angular
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
